(PE-34384) Open Java IO subsystem for JRuby
In Java 17 portions of the Java IO subsystem became protected and access
by JRuby, particularly by SeekableByteChannelImpl, now fails.

Note, I have not created a JRuby issue or done other work on this
because I have not been able to reproduce the issue outside of travis.